# codecortex

codecortex/: Cargo.toml
codecortex-web/: index.html  package-lock.json  package.json
codecortex-web/src/: App.css  App.tsx  index.css
codecortex/src/: lib.rs  main.rs
codecortex/src/agent/: mod.rs  skills.rs  wiki.rs
codecortex/src/core/: mod.rs
codecortex/src/graph/: heuristics.rs  mod.rs
codecortex/src/indexer/: mod.rs  watcher.rs
codecortex/src/mcp/: mod.rs
codecortex/src/server/: mod.rs
gitnexus-web/: PHASE_6_ENTERPRISE_TODO.md  index.html  package-lock.json  package.json  test-clone.ts  test-proxy.ts
gitnexus-web/src/: App.tsx  index.css
gitnexus-web/src/components/: BackendRepoSelector.tsx  CodeReferencesPanel.tsx  DropZone.tsx  GraphCanvas.tsx  Header.tsx  HelpModal.tsx  InsightsDashboard.tsx  PRPulsePanel.tsx  ProcessFlowModal.tsx  RightPanel.tsx  SettingsPanel.tsx  StatusBar.tsx  TimelineScrubber.tsx
gitnexus-web/src/core/analysis/: taint-analysis.ts
gitnexus-web/src/core/graph/: graph.ts  types.ts
gitnexus-web/src/core/guardrails/: guardrails-engine.ts
gitnexus-web/src/core/ingestion/: cross-repo-processor.ts  git-processor.ts  process-processor.ts
gitnexus-web/src/hooks/: useAppState.tsx  useSigma.ts
gitnexus-web/src/lib/: blast-radius.ts  constants.ts  graph-adapter.ts  mermaid-generator.ts  pdf-generator.ts
gitnexus-web/src/services/: backend.ts  git-clone.ts
gitnexus/src/core/graph/: types.ts
gitnexus/src/core/ingestion/: hotspot-processor.ts  parsing-processor.ts  pipeline.ts
(+1 files in other folders)
